<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JadesActivity">

    <ListView
        android:id="@+id/jadesList"
        android:layout_width="418dp"
        android:layout_height="605dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toTopOf="@+id/jadesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/visitedtitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/niagara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/niagara" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/ok"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trad" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/wa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tree" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/la"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alligator" />

</androidx.constraintlayout.widget.ConstraintLayout>