<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarsdenActivity">

    <ImageView
        android:id="@+id/jmmAvatarPic"
        android:layout_width="94dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/jmm_fireflamemm_pic_content_description"
        app:layout_constraintBottom_toTopOf="@+id/jmmLangList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fireflamemm_new_character"
        tools:srcCompat="@drawable/fireflamemm_new_character" />

    <Button
        android:id="@+id/jmmEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onEmailClick"
        android:text="@string/jmm_email"
        app:layout_constraintEnd_toEndOf="@+id/jmmNameTextView"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@+id/jmmNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/jmmNameTextView"
        tools:text="@string/jmm_email" />

    <TextView
        android:id="@+id/jmmNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/jmm_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/jmmAvatarPic"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/jmm_name" />

    <ListView
        android:id="@+id/jmmLangList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jmmEmailButton" />
</androidx.constraintlayout.widget.ConstraintLayout>