<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skhActivity"
    android:background="@drawable/basicpattern">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="143dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center_horizontal"
        android:text="@string/skh_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="219dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center_horizontal"
        android:text="@string/list_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center_horizontal"
        android:text="@string/skh_name"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="143dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skanddisney5ever" />

    <ListView
        android:id="@+id/disneyWorld_List"
        android:layout_width="0dp"
        android:layout_height="518dp"
        android:layout_marginTop="24dp"
        android:cacheColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>